Name:                astro-orbit
Version:             0.2
License:             BSD3
License-File:        LICENSE
Copyright:           Bjorn Buckwalter 2011
Author:              Bjorn Buckwalter 
Maintainer:          bjorn.buckwalter@gmail.com
Stability:           Unstable
Synopsis:            Orbit representations
Description:
    Orbit representations and ephemeris.
Category:            Physics
Build-Type:          Simple
Build-Depends:       base < 5,
                     dimensional < 1.1,
                     dimensional-vectors >= 0.9 && < 1.1,
                     dimensional-experimental >= 0.4 && < 1.1,
                     astro < 1.1,
                     ieee754 < 1.1,
                     numtype < 1.1
Exposed-Modules:     Astro.Orbit.Anomaly,
                     Astro.Orbit.COE,
                     Astro.Orbit.Conversion,
                     Astro.Orbit.Interpolate
                     Astro.Orbit.MEOE,
                     Astro.Orbit.SV,
                     Astro.Orbit.Types,
                     Astro.Trajectory,
                     Astro.Trajectory.EphemTrajectory
Extra-source-files:  README
