Name:                astro-time
Version:             0.1
License:             BSD3
License-File:        LICENSE
Copyright:           Bjorn Buckwalter 2008
Author:              Bjorn Buckwalter 
Maintainer:          bjorn.buckwalter@gmail.com
Stability:           Unstable
Synopsis:            Time scales for astrodynamics
Description:
    Time scales and time conversion facilities relevant to astrodynamics.
Category:            Math
Build-Type:          Simple
Build-Depends:       base, time, dimensional
Exposed-Modules:     Astro.Time,
                     Astro.Time.Barycentric.AsA2009,
                     Astro.Time.Barycentric.Kaplan2005,
                     Astro.Time.Barycentric.TT
Extra-source-files:  README,
                     Astro/TestTime.hs,
                     Astro/Time/Barycentric/TestAsA2009.hs
 
