Name:                astro
-- PVP summary:      +-+------- breaking API changes
--                   | |  +----- non-breaking API additions
--                   | |  | +--- code changes with no API change
Version:             0.17.0.0
License:             BSD3
License-File:        LICENSE
Copyright:           Bjorn Buckwalter 2008-2014
Author:              Bjorn Buckwalter 
Maintainer:          bjorn.buckwalter@gmail.com
Stability:           Unstable
Synopsis:            Experimental library for astrodynamics.
Description:
    Time scales and time conversion facilities relevant to astrodynamics.
    Earth orientation parameters.
    Orbit representations and ephemeris. TLE parsing.
Category:            Physics, Astrodynamics
Build-Type:          Simple
Build-Depends:       base < 5,
                     old-locale,
                     time,
                     mtl,
                     array,
                     HList-classic > 0.1,
                     data-default > 0.5,
                     leapseconds-announced,
                     numtype < 1.2,
                     dimensional < 1.1,
                     dimensional-vectors >= 0.10.1,
                     dimensional-experimental >= 0.9,
                     ieee754,
                     ad >= 4.2,
                     astro-tables
Exposed-Modules:     Astro
                     Astro.DefaultData
                     Astro.Coords
                     Astro.Coords.PosVel
                     Astro.Coords.TNR
                     Astro.Place
                     Astro.Place.ReferenceEllipsoid
                     Astro.Place.Topocentric
                     Astro.Time
                     Astro.Time.Barycentric.AsA2009
                     Astro.Time.Barycentric.Kaplan2005
                     Astro.Time.Barycentric.TT
                     Astro.Time.Convert
                     Astro.Time.ForwardAD
                     Astro.Time.Interop
                     Astro.Time.Sidereal
                     Astro.Time.At
                     Astro.Celestrak
                     IAU2000.FundamentalArguments
                     IAU2000.Nutation
                     IAU2000.Equations
                     Astrodynamics
                     Tmp.Lifts
                     Astro.Util
                     --TLE
                     --TLE.Parse
                     --TLE.Util
                     -- The below were originally in astro-orbit
                     Astro.Orbit.Anomaly
                     Astro.Orbit.COE
                     Astro.Orbit.Conversion
                     Astro.Orbit.Interpolate
                     Astro.Orbit.MEOE
                     Astro.Orbit.SV
                     Astro.Orbit.Types
                     Astro.Orbit.Maneuver
                     Astro.SolarCoordinates
                     Astro.Trajectory
                     Astro.Trajectory.Cropped
                     Astro.Trajectory.EphemTrajectory
                     Astro.Util.Cyclic
Extra-source-files:  README
