Name:                astro
-- PVP summary:      +-+------- breaking API changes
--                   | |  +----- non-breaking API additions
--                   | |  | +--- code changes with no API change
Version:             0.20
License:             BSD3
License-File:        LICENSE
Copyright:           Bjorn Buckwalter 2008-2016
Author:              Bjorn Buckwalter
Maintainer:          bjorn.buckwalter@gmail.com
Stability:           Unstable
Synopsis:            Experimental library for astrodynamics.
Description:
    Time scales and time conversion facilities relevant to astrodynamics.
    Earth orientation parameters.
    Orbit representations and ephemeris. TLE parsing.
Category:            Physics, Astrodynamics
Build-Type:          Simple
Build-Depends:       base,
                     old-locale,
                     time,
                     mtl,
                     array,
                     data-default > 0.5,
                     leapseconds-announced,
                     numtype-dk,
                     dimensional,
                     dimensional-homo,
                     dimensional-experimental,
                     dimensional-dk-experimental,
                     ieee,
                     ad,
                     astro-tables
hs-source-dirs:      src
Exposed-Modules:     Astro
                     Astro.AD
                     Astro.DefaultData
                     Astro.Coords
                     Astro.Coords.ECR
                     Astro.Coords.PosVel
                     Astro.Coords.TNR
                     Astro.Place
                     Astro.Place.ReferenceEllipsoid
                     Astro.Place.Topocentric
                     Astro.Time
                     Astro.Time.Barycentric.AsA2009
                     Astro.Time.Barycentric.Kaplan2005
                     Astro.Time.Barycentric.TT
                     Astro.Time.Convert
                     Astro.Time.ForwardAD
                     Astro.Time.Interop
                     Astro.Time.Sidereal
                     Astro.Time.At
                     Astro.Celestrak
                     IAU2000.FundamentalArguments
                     IAU2000.Nutation
                     IAU2000.Equations
                     Astrodynamics
                     Tmp.Lifts
                     Astro.Util
                     --TLE
                     --TLE.Parse
                     --TLE.Util
                     -- The below were originally in astro-orbit
                     Astro.Orbit.Anomaly
                     Astro.Orbit.COE
                     Astro.Orbit.Conversion
                     Astro.Orbit.Interpolate
                     Astro.Orbit.MEOE
                     Astro.Orbit.SV
                     Astro.Orbit.Types
                     Astro.Orbit.Maneuver
                     Astro.SolarCoordinates
                     Astro.Trajectory
                     Astro.Trajectory.Cropped
                     Astro.Trajectory.EphemTrajectory
                     Astro.Util.Cyclic
Extra-source-files:  README
