Name:                astrodynamics
-- PVP summary:      +-+------- breaking API changes
--                   | |  +----- non-breaking API additions
--                   | |  | +--- code changes with no API change
Version:             0.22
License:             BSD3
License-File:        LICENSE
Copyright:           Bjorn Buckwalter 2008-2016
Author:              Bjorn Buckwalter
Maintainer:          bjorn.buckwalter@gmail.com
Stability:           Unstable
Synopsis:            Experimental library for astrodynamics.
Description:
    Time scales and time conversion facilities relevant to astrodynamics.
    Earth orientation parameters.
    Orbit representations and ephemeris. TLE parsing.
Category:            Physics, Astrodynamics
Build-Type:          Simple
Extra-source-files:  README
cabal-version:       >=1.10

library
  default-language:    Haskell2010
  hs-source-dirs:      src
  Build-Depends:       base,
                       old-locale,
                       time,
                       mtl,
                       array,
                       data-default > 0.5,
                       leapseconds-announced,
                       numtype-dk,
                       dimensional,
                       dimensional-homo,
                       dimensional-experimental,
                       dimensional-dk-experimental,
                       ieee754,
                       ad,
                       astro-tables
  Exposed-Modules:     Astro
                       Astro.AD
                       Astro.AD.Place
                       Astro.Celestrak
                       Astro.DefaultData
                       Astro.Coords
                       Astro.Coords.ECR
                       Astro.Coords.PosVel
                       Astro.Coords.TNR
                       Astro.Place
                       Astro.Place.ReferenceEllipsoid
                       Astro.Place.Topocentric
                       Astro.Time
                       Astro.Time.Barycentric.AsA2009
                       Astro.Time.Barycentric.Kaplan2005
                       Astro.Time.Barycentric.TT
                       Astro.Time.Convert
                       Astro.Time.ForwardAD
                       Astro.Time.Interop
                       Astro.Time.Sidereal
                       Astro.Time.At
                       IAU2000.FundamentalArguments
                       IAU2000.Nutation
                       IAU2000.Equations
                       Astrodynamics
                       Astro.Util
                       --TLE
                       --TLE.Parse
                       --TLE.Util
                       -- The below were originally in astro-orbit
                       Astro.Orbit.Anomaly
                       Astro.Orbit.COE
                       Astro.Orbit.Conversion
                       Astro.Orbit.Interpolate
                       Astro.Orbit.MEOE
                       Astro.Orbit.SV
                       Astro.Orbit.Types
                       Astro.Orbit.Maneuver
                       Astro.SolarCoordinates
                       Astro.Trajectory
                       Astro.Trajectory.Cropped
                       Astro.Trajectory.EphemTrajectory
                       Astro.Util.Cyclic

test-suite properties
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.lhs
  other-modules:       Astro.Place.TestTopocentric
                     , Astro.TestCelestrak
                     , Astro.TestTime
                     , Astro.Time.Barycentric.TestAsA2009
                     , IAU2000.TestEquations
                     , TestInstances
                     , TestUtil

  build-depends:       base
                     , astrodynamics
                     , dimensional
                     , dimensional-dk-experimental
                     , dimensional-experimental
                     , dimensional-homo
                     , astro
                     , QuickCheck
                     , ieee754
                     , hspec
                     , time
                     , array
                     -- , template-haskell
  ghc-options:         -threaded
  default-language:    Haskell2010

test-suite specs
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Astro.Coords.ECRSpec
                     , Astro.Coords.TNRSpec
                     , Astro.Orbit.AnomalySpec
                     , Astro.Orbit.ConversionSpec
                     , Astro.Orbit.InterpolateSpec
                     , Astro.Orbit.MEOESpec
                     , Astro.Orbit.ManeuverSpec
                     , Astro.Time.AtSpec
                     , Astro.Time.SiderealSpec
                     , Astro.Trajectory.CroppedSpec
                     , Astro.Util.CyclicSpec
                     , Astro.UtilSpec
                     , AstrodynamicsSpec
                     , TestInstances
                     , TestUtil
  build-depends:       base
                     , astrodynamics
                     , dimensional
                     , dimensional-experimental
                     , dimensional-dk-experimental
                     , dimensional-homo
                     , astro
                     , QuickCheck
                     , ieee754
                     , hspec
                     , time
                     , array
                     -- , template-haskell
  ghc-options:         -threaded
  default-language:    Haskell2010

-- test-suite dimensional-homo-test
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   build-depends:       base
--                      , dimensional-homo
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/bjornbm/astro
